--- a/package.json
+++ b/package.json
@@ -14,18 +14,24 @@
   "license": "ISC",
   "dependencies": {
     "gun": "^0.2020.1239",
+    "js-sha256": "^0.11.0",
+    "latlon-geohash": "^2.0.0",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^3.6.2",
     "minisearch": "^6.3.0",
     "parcel": "^2.11.0",
     "pmtiles": "^2.11.0",
     "protomaps-leaflet": "^1.24.2",
+    "shape2geohash": "^1.2.6",
     "trystero": "^0.16.0",
     "van-cone": "^0.0.7",
     "vanjs-core": "^1.2.8",
     "vanjs-ext": "^0.2.0"
   },
   "devDependencies": {
-    "buffer": "^6.0.3"
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0"
   }
 }
